@@ -38,6 +38,7 @@ export(flip)
 export(geom_aline)
 export(geom_cladelabel)
 export(geom_hilight)
+export(geom_label2)
 export(geom_nodepoint)
 export(geom_point2)
 export(geom_range)
@@ -156,6 +157,7 @@ importFrom(ape,which.edge)
 importFrom(ape,write.tree)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,GeomCurve)
+importFrom(ggplot2,GeomLabel)
 importFrom(ggplot2,GeomPoint)
 importFrom(ggplot2,GeomRect)
 importFrom(ggplot2,GeomSegment)
