@@ -4,18 +4,15 @@
 \alias{geom_text2}
 \title{geom_text2}
 \usage{
-geom_text2(mapping = NULL, data = NULL, stat = "identity",
-  position = "identity", parse = FALSE, na.rm = TRUE, show.legend = NA,
-  inherit.aes = TRUE, ..., nudge_x = 0, nudge_y = 0,
-  check_overlap = FALSE)
+geom_text2(mapping = NULL, data = NULL, position = "identity",
+  parse = FALSE, na.rm = TRUE, show.legend = NA, inherit.aes = TRUE,
+  ..., nudge_x = 0, nudge_y = 0, check_overlap = FALSE)
 }
 \arguments{
 \item{mapping}{the aesthetic mapping}
 
 \item{data}{A layer specific dataset -
 only needed if you want to override he plot defaults.}
-
-\item{stat}{The statistical transformation to use on the data for this layer}
 
 \item{position}{The position adjustment to use for overlapping points on this layer}
 
